--- a/Javascript/Students/mumthas/sample9.html
+++ b/Javascript/Students/mumthas/sample9.html
@@ -10,15 +10,11 @@
 </head>
 <body>
     <p id="demo">Helllo </p>
-    
+    <p class="demo2">Hai</p>
     <script>
-
-        var a=10;
-        while(a>0)
-    {
-        document.write(a);
-        a=a-1;
-    }
+document.getElementById("demo").innerHTML="My Name";
+document.getElementsByClassName("demo2").innerHTML="Rasiya";
+       
 
 
 
